[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aura-framework"
version = "1.0.0"
description = "Autonomous Vector-Space Auditing & Embedding Inversion Framework"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
]